APIs/googleapis.com/analytics/v2.4/python-client/README.md
# openapi-client
Views and manages your Google Analytics data.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2.4
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://www.googleapis.com/analytics/v2.4
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://www.googleapis.com/analytics/v2.4"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.DataApi(api_client)
    ids = 'ids_example' # str | Unique table ID for retrieving report data. Table ID is of the form ga:XXXX, where XXXX is the Analytics view (profile) ID.
    start_date = 'start_date_example' # str | Start date for fetching report data. All requests should specify a start date formatted as YYYY-MM-DD.
    end_date = 'end_date_example' # str | End date for fetching report data. All requests should specify an end date formatted as YYYY-MM-DD.
    metrics = 'metrics_example' # str | A comma-separated list of Analytics metrics. E.g., 'ga:sessions,ga:pageviews'. At least one metric must be specified to retrieve a valid Analytics report.
    alt = atom # str | Data format for the response. (optional) (default to atom)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = False # bool | Returns response with indentations and line breaks. (optional) (default to False)
    quota_user = 'quota_user_example' # str | An opaque string that represents a user for quota purposes. Must not exceed 40 characters. (optional)
    user_ip = 'user_ip_example' # str | Deprecated. Please use quotaUser instead. (optional)
    dimensions = 'dimensions_example' # str | A comma-separated list of Analytics dimensions. E.g., 'ga:browser,ga:city'. (optional)
    filters = 'filters_example' # str | A comma-separated list of dimension or metric filters to be applied to the report data. (optional)
    max_results = 56 # int | The maximum number of entries to include in this feed. (optional)
    segment = 'segment_example' # str | An Analytics advanced segment to be applied to the report data. (optional)
    sort = 'sort_example' # str | A comma-separated list of dimensions or metrics that determine the sort order for the report data. (optional)
    start_index = 56 # int | An index of the first entity to retrieve. Use this parameter as a pagination mechanism along with the max-results parameter. (optional)

    try:
        api_instance.analytics_data_get(ids, start_date, end_date, metrics, alt=alt, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, user_ip=user_ip, dimensions=dimensions, filters=filters, max_results=max_results, segment=segment, sort=sort, start_index=start_index)
    except ApiException as e:
        print("Exception when calling DataApi->analytics_data_get: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/analytics/v2.4*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DataApi* | [**analytics_data_get**](docs/DataApi.md#analytics_data_get) | **GET** /data | 
*ManagementApi* | [**analytics_management_accounts_list**](docs/ManagementApi.md#analytics_management_accounts_list) | **GET** /management/accounts | 
*ManagementApi* | [**analytics_management_goals_list**](docs/ManagementApi.md#analytics_management_goals_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/goals | 
*ManagementApi* | [**analytics_management_profiles_list**](docs/ManagementApi.md#analytics_management_profiles_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles | 
*ManagementApi* | [**analytics_management_segments_list**](docs/ManagementApi.md#analytics_management_segments_list) | **GET** /management/segments | 
*ManagementApi* | [**analytics_management_webproperties_list**](docs/ManagementApi.md#analytics_management_webproperties_list) | **GET** /management/accounts/{accountId}/webproperties | 


## Documentation For Models



<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/analytics**: View and manage your Google Analytics data
 - **https://www.googleapis.com/auth/analytics.readonly**: View your Google Analytics data

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/analytics**: View and manage your Google Analytics data
 - **https://www.googleapis.com/auth/analytics.readonly**: View your Google Analytics data


## Author




