APIs/googleapis.com/analytics/v3/python-client/README.md
# openapi-client
Views and manages your Google Analytics data.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v3
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://analytics.googleapis.com/analytics/v3
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://analytics.googleapis.com/analytics/v3"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.DataApi(api_client)
    ids = 'ids_example' # str | Unique table ID for retrieving Analytics data. Table ID is of the form ga:XXXX, where XXXX is the Analytics view (profile) ID.
    start_date = 'start_date_example' # str | Start date for fetching Analytics data. Requests can specify a start date formatted as YYYY-MM-DD, or as a relative date (e.g., today, yesterday, or 7daysAgo). The default value is 7daysAgo.
    end_date = 'end_date_example' # str | End date for fetching Analytics data. Request can should specify an end date formatted as YYYY-MM-DD, or as a relative date (e.g., today, yesterday, or 7daysAgo). The default value is yesterday.
    metrics = 'metrics_example' # str | A comma-separated list of Analytics metrics. E.g., 'ga:sessions,ga:pageviews'. At least one metric must be specified.
    alt = 'alt_example' # str | Data format for the response. (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | An opaque string that represents a user for quota purposes. Must not exceed 40 characters. (optional)
    user_ip = 'user_ip_example' # str | Deprecated. Please use quotaUser instead. (optional)
    dimensions = 'dimensions_example' # str | A comma-separated list of Analytics dimensions. E.g., 'ga:browser,ga:city'. (optional)
    filters = 'filters_example' # str | A comma-separated list of dimension or metric filters to be applied to Analytics data. (optional)
    include_empty_rows = True # bool | The response will include empty rows if this parameter is set to true, the default is true (optional)
    max_results = 56 # int | The maximum number of entries to include in this feed. (optional)
    output = 'output_example' # str | The selected format for the response. Default format is JSON. (optional)
    sampling_level = 'sampling_level_example' # str | The desired sampling level. (optional)
    segment = 'segment_example' # str | An Analytics segment to be applied to data. (optional)
    sort = 'sort_example' # str | A comma-separated list of dimensions or metrics that determine the sort order for Analytics data. (optional)
    start_index = 56 # int | An index of the first entity to retrieve. Use this parameter as a pagination mechanism along with the max-results parameter. (optional)

    try:
        api_response = api_instance.analytics_data_ga_get(ids, start_date, end_date, metrics, alt=alt, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, user_ip=user_ip, dimensions=dimensions, filters=filters, include_empty_rows=include_empty_rows, max_results=max_results, output=output, sampling_level=sampling_level, segment=segment, sort=sort, start_index=start_index)
        print("The response of DataApi->analytics_data_ga_get:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling DataApi->analytics_data_ga_get: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://analytics.googleapis.com/analytics/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DataApi* | [**analytics_data_ga_get**](docs/DataApi.md#analytics_data_ga_get) | **GET** /data/ga | 
*DataApi* | [**analytics_data_mcf_get**](docs/DataApi.md#analytics_data_mcf_get) | **GET** /data/mcf | 
*DataApi* | [**analytics_data_realtime_get**](docs/DataApi.md#analytics_data_realtime_get) | **GET** /data/realtime | 
*ManagementApi* | [**analytics_management_account_summaries_list**](docs/ManagementApi.md#analytics_management_account_summaries_list) | **GET** /management/accountSummaries | 
*ManagementApi* | [**analytics_management_account_user_links_delete**](docs/ManagementApi.md#analytics_management_account_user_links_delete) | **DELETE** /management/accounts/{accountId}/entityUserLinks/{linkId} | 
*ManagementApi* | [**analytics_management_account_user_links_insert**](docs/ManagementApi.md#analytics_management_account_user_links_insert) | **POST** /management/accounts/{accountId}/entityUserLinks | 
*ManagementApi* | [**analytics_management_account_user_links_list**](docs/ManagementApi.md#analytics_management_account_user_links_list) | **GET** /management/accounts/{accountId}/entityUserLinks | 
*ManagementApi* | [**analytics_management_account_user_links_update**](docs/ManagementApi.md#analytics_management_account_user_links_update) | **PUT** /management/accounts/{accountId}/entityUserLinks/{linkId} | 
*ManagementApi* | [**analytics_management_accounts_list**](docs/ManagementApi.md#analytics_management_accounts_list) | **GET** /management/accounts | 
*ManagementApi* | [**analytics_management_client_id_hash_client_id**](docs/ManagementApi.md#analytics_management_client_id_hash_client_id) | **POST** /management/clientId:hashClientId | 
*ManagementApi* | [**analytics_management_custom_data_sources_list**](docs/ManagementApi.md#analytics_management_custom_data_sources_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/customDataSources | 
*ManagementApi* | [**analytics_management_custom_dimensions_get**](docs/ManagementApi.md#analytics_management_custom_dimensions_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/customDimensions/{customDimensionId} | 
*ManagementApi* | [**analytics_management_custom_dimensions_insert**](docs/ManagementApi.md#analytics_management_custom_dimensions_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/customDimensions | 
*ManagementApi* | [**analytics_management_custom_dimensions_list**](docs/ManagementApi.md#analytics_management_custom_dimensions_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/customDimensions | 
*ManagementApi* | [**analytics_management_custom_dimensions_patch**](docs/ManagementApi.md#analytics_management_custom_dimensions_patch) | **PATCH** /management/accounts/{accountId}/webproperties/{webPropertyId}/customDimensions/{customDimensionId} | 
*ManagementApi* | [**analytics_management_custom_dimensions_update**](docs/ManagementApi.md#analytics_management_custom_dimensions_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId}/customDimensions/{customDimensionId} | 
*ManagementApi* | [**analytics_management_custom_metrics_get**](docs/ManagementApi.md#analytics_management_custom_metrics_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/customMetrics/{customMetricId} | 
*ManagementApi* | [**analytics_management_custom_metrics_insert**](docs/ManagementApi.md#analytics_management_custom_metrics_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/customMetrics | 
*ManagementApi* | [**analytics_management_custom_metrics_list**](docs/ManagementApi.md#analytics_management_custom_metrics_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/customMetrics | 
*ManagementApi* | [**analytics_management_custom_metrics_patch**](docs/ManagementApi.md#analytics_management_custom_metrics_patch) | **PATCH** /management/accounts/{accountId}/webproperties/{webPropertyId}/customMetrics/{customMetricId} | 
*ManagementApi* | [**analytics_management_custom_metrics_update**](docs/ManagementApi.md#analytics_management_custom_metrics_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId}/customMetrics/{customMetricId} | 
*ManagementApi* | [**analytics_management_experiments_delete**](docs/ManagementApi.md#analytics_management_experiments_delete) | **DELETE** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/experiments/{experimentId} | 
*ManagementApi* | [**analytics_management_experiments_get**](docs/ManagementApi.md#analytics_management_experiments_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/experiments/{experimentId} | 
*ManagementApi* | [**analytics_management_experiments_insert**](docs/ManagementApi.md#analytics_management_experiments_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/experiments | 
*ManagementApi* | [**analytics_management_experiments_list**](docs/ManagementApi.md#analytics_management_experiments_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/experiments | 
*ManagementApi* | [**analytics_management_experiments_patch**](docs/ManagementApi.md#analytics_management_experiments_patch) | **PATCH** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/experiments/{experimentId} | 
*ManagementApi* | [**analytics_management_experiments_update**](docs/ManagementApi.md#analytics_management_experiments_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/experiments/{experimentId} | 
*ManagementApi* | [**analytics_management_filters_delete**](docs/ManagementApi.md#analytics_management_filters_delete) | **DELETE** /management/accounts/{accountId}/filters/{filterId} | 
*ManagementApi* | [**analytics_management_filters_get**](docs/ManagementApi.md#analytics_management_filters_get) | **GET** /management/accounts/{accountId}/filters/{filterId} | 
*ManagementApi* | [**analytics_management_filters_insert**](docs/ManagementApi.md#analytics_management_filters_insert) | **POST** /management/accounts/{accountId}/filters | 
*ManagementApi* | [**analytics_management_filters_list**](docs/ManagementApi.md#analytics_management_filters_list) | **GET** /management/accounts/{accountId}/filters | 
*ManagementApi* | [**analytics_management_filters_patch**](docs/ManagementApi.md#analytics_management_filters_patch) | **PATCH** /management/accounts/{accountId}/filters/{filterId} | 
*ManagementApi* | [**analytics_management_filters_update**](docs/ManagementApi.md#analytics_management_filters_update) | **PUT** /management/accounts/{accountId}/filters/{filterId} | 
*ManagementApi* | [**analytics_management_goals_get**](docs/ManagementApi.md#analytics_management_goals_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/goals/{goalId} | 
*ManagementApi* | [**analytics_management_goals_insert**](docs/ManagementApi.md#analytics_management_goals_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/goals | 
*ManagementApi* | [**analytics_management_goals_list**](docs/ManagementApi.md#analytics_management_goals_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/goals | 
*ManagementApi* | [**analytics_management_goals_patch**](docs/ManagementApi.md#analytics_management_goals_patch) | **PATCH** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/goals/{goalId} | 
*ManagementApi* | [**analytics_management_goals_update**](docs/ManagementApi.md#analytics_management_goals_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/goals/{goalId} | 
*ManagementApi* | [**analytics_management_profile_filter_links_delete**](docs/ManagementApi.md#analytics_management_profile_filter_links_delete) | **DELETE** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/profileFilterLinks/{linkId} | 
*ManagementApi* | [**analytics_management_profile_filter_links_get**](docs/ManagementApi.md#analytics_management_profile_filter_links_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/profileFilterLinks/{linkId} | 
*ManagementApi* | [**analytics_management_profile_filter_links_insert**](docs/ManagementApi.md#analytics_management_profile_filter_links_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/profileFilterLinks | 
*ManagementApi* | [**analytics_management_profile_filter_links_list**](docs/ManagementApi.md#analytics_management_profile_filter_links_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/profileFilterLinks | 
*ManagementApi* | [**analytics_management_profile_filter_links_patch**](docs/ManagementApi.md#analytics_management_profile_filter_links_patch) | **PATCH** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/profileFilterLinks/{linkId} | 
*ManagementApi* | [**analytics_management_profile_filter_links_update**](docs/ManagementApi.md#analytics_management_profile_filter_links_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/profileFilterLinks/{linkId} | 
*ManagementApi* | [**analytics_management_profile_user_links_delete**](docs/ManagementApi.md#analytics_management_profile_user_links_delete) | **DELETE** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/entityUserLinks/{linkId} | 
*ManagementApi* | [**analytics_management_profile_user_links_insert**](docs/ManagementApi.md#analytics_management_profile_user_links_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/entityUserLinks | 
*ManagementApi* | [**analytics_management_profile_user_links_list**](docs/ManagementApi.md#analytics_management_profile_user_links_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/entityUserLinks | 
*ManagementApi* | [**analytics_management_profile_user_links_update**](docs/ManagementApi.md#analytics_management_profile_user_links_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/entityUserLinks/{linkId} | 
*ManagementApi* | [**analytics_management_profiles_delete**](docs/ManagementApi.md#analytics_management_profiles_delete) | **DELETE** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId} | 
*ManagementApi* | [**analytics_management_profiles_get**](docs/ManagementApi.md#analytics_management_profiles_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId} | 
*ManagementApi* | [**analytics_management_profiles_insert**](docs/ManagementApi.md#analytics_management_profiles_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles | 
*ManagementApi* | [**analytics_management_profiles_list**](docs/ManagementApi.md#analytics_management_profiles_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles | 
*ManagementApi* | [**analytics_management_profiles_patch**](docs/ManagementApi.md#analytics_management_profiles_patch) | **PATCH** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId} | 
*ManagementApi* | [**analytics_management_profiles_update**](docs/ManagementApi.md#analytics_management_profiles_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId} | 
*ManagementApi* | [**analytics_management_remarketing_audience_delete**](docs/ManagementApi.md#analytics_management_remarketing_audience_delete) | **DELETE** /management/accounts/{accountId}/webproperties/{webPropertyId}/remarketingAudiences/{remarketingAudienceId} | 
*ManagementApi* | [**analytics_management_remarketing_audience_get**](docs/ManagementApi.md#analytics_management_remarketing_audience_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/remarketingAudiences/{remarketingAudienceId} | 
*ManagementApi* | [**analytics_management_remarketing_audience_insert**](docs/ManagementApi.md#analytics_management_remarketing_audience_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/remarketingAudiences | 
*ManagementApi* | [**analytics_management_remarketing_audience_list**](docs/ManagementApi.md#analytics_management_remarketing_audience_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/remarketingAudiences | 
*ManagementApi* | [**analytics_management_remarketing_audience_patch**](docs/ManagementApi.md#analytics_management_remarketing_audience_patch) | **PATCH** /management/accounts/{accountId}/webproperties/{webPropertyId}/remarketingAudiences/{remarketingAudienceId} | 
*ManagementApi* | [**analytics_management_remarketing_audience_update**](docs/ManagementApi.md#analytics_management_remarketing_audience_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId}/remarketingAudiences/{remarketingAudienceId} | 
*ManagementApi* | [**analytics_management_segments_list**](docs/ManagementApi.md#analytics_management_segments_list) | **GET** /management/segments | 
*ManagementApi* | [**analytics_management_unsampled_reports_delete**](docs/ManagementApi.md#analytics_management_unsampled_reports_delete) | **DELETE** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/unsampledReports/{unsampledReportId} | 
*ManagementApi* | [**analytics_management_unsampled_reports_get**](docs/ManagementApi.md#analytics_management_unsampled_reports_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/unsampledReports/{unsampledReportId} | 
*ManagementApi* | [**analytics_management_unsampled_reports_insert**](docs/ManagementApi.md#analytics_management_unsampled_reports_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/unsampledReports | 
*ManagementApi* | [**analytics_management_unsampled_reports_list**](docs/ManagementApi.md#analytics_management_unsampled_reports_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/profiles/{profileId}/unsampledReports | 
*ManagementApi* | [**analytics_management_uploads_delete_upload_data**](docs/ManagementApi.md#analytics_management_uploads_delete_upload_data) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/customDataSources/{customDataSourceId}/deleteUploadData | 
*ManagementApi* | [**analytics_management_uploads_get**](docs/ManagementApi.md#analytics_management_uploads_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/customDataSources/{customDataSourceId}/uploads/{uploadId} | 
*ManagementApi* | [**analytics_management_uploads_list**](docs/ManagementApi.md#analytics_management_uploads_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/customDataSources/{customDataSourceId}/uploads | 
*ManagementApi* | [**analytics_management_uploads_upload_data**](docs/ManagementApi.md#analytics_management_uploads_upload_data) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/customDataSources/{customDataSourceId}/uploads | 
*ManagementApi* | [**analytics_management_web_property_ad_words_links_delete**](docs/ManagementApi.md#analytics_management_web_property_ad_words_links_delete) | **DELETE** /management/accounts/{accountId}/webproperties/{webPropertyId}/entityAdWordsLinks/{webPropertyAdWordsLinkId} | 
*ManagementApi* | [**analytics_management_web_property_ad_words_links_get**](docs/ManagementApi.md#analytics_management_web_property_ad_words_links_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/entityAdWordsLinks/{webPropertyAdWordsLinkId} | 
*ManagementApi* | [**analytics_management_web_property_ad_words_links_insert**](docs/ManagementApi.md#analytics_management_web_property_ad_words_links_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/entityAdWordsLinks | 
*ManagementApi* | [**analytics_management_web_property_ad_words_links_list**](docs/ManagementApi.md#analytics_management_web_property_ad_words_links_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/entityAdWordsLinks | 
*ManagementApi* | [**analytics_management_web_property_ad_words_links_patch**](docs/ManagementApi.md#analytics_management_web_property_ad_words_links_patch) | **PATCH** /management/accounts/{accountId}/webproperties/{webPropertyId}/entityAdWordsLinks/{webPropertyAdWordsLinkId} | 
*ManagementApi* | [**analytics_management_web_property_ad_words_links_update**](docs/ManagementApi.md#analytics_management_web_property_ad_words_links_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId}/entityAdWordsLinks/{webPropertyAdWordsLinkId} | 
*ManagementApi* | [**analytics_management_webproperties_get**](docs/ManagementApi.md#analytics_management_webproperties_get) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId} | 
*ManagementApi* | [**analytics_management_webproperties_insert**](docs/ManagementApi.md#analytics_management_webproperties_insert) | **POST** /management/accounts/{accountId}/webproperties | 
*ManagementApi* | [**analytics_management_webproperties_list**](docs/ManagementApi.md#analytics_management_webproperties_list) | **GET** /management/accounts/{accountId}/webproperties | 
*ManagementApi* | [**analytics_management_webproperties_patch**](docs/ManagementApi.md#analytics_management_webproperties_patch) | **PATCH** /management/accounts/{accountId}/webproperties/{webPropertyId} | 
*ManagementApi* | [**analytics_management_webproperties_update**](docs/ManagementApi.md#analytics_management_webproperties_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId} | 
*ManagementApi* | [**analytics_management_webproperty_user_links_delete**](docs/ManagementApi.md#analytics_management_webproperty_user_links_delete) | **DELETE** /management/accounts/{accountId}/webproperties/{webPropertyId}/entityUserLinks/{linkId} | 
*ManagementApi* | [**analytics_management_webproperty_user_links_insert**](docs/ManagementApi.md#analytics_management_webproperty_user_links_insert) | **POST** /management/accounts/{accountId}/webproperties/{webPropertyId}/entityUserLinks | 
*ManagementApi* | [**analytics_management_webproperty_user_links_list**](docs/ManagementApi.md#analytics_management_webproperty_user_links_list) | **GET** /management/accounts/{accountId}/webproperties/{webPropertyId}/entityUserLinks | 
*ManagementApi* | [**analytics_management_webproperty_user_links_update**](docs/ManagementApi.md#analytics_management_webproperty_user_links_update) | **PUT** /management/accounts/{accountId}/webproperties/{webPropertyId}/entityUserLinks/{linkId} | 
*MetadataApi* | [**analytics_metadata_columns_list**](docs/MetadataApi.md#analytics_metadata_columns_list) | **GET** /metadata/{reportType}/columns | 
*ProvisioningApi* | [**analytics_provisioning_create_account_ticket**](docs/ProvisioningApi.md#analytics_provisioning_create_account_ticket) | **POST** /provisioning/createAccountTicket | 
*ProvisioningApi* | [**analytics_provisioning_create_account_tree**](docs/ProvisioningApi.md#analytics_provisioning_create_account_tree) | **POST** /provisioning/createAccountTree | 
*UserDeletionApi* | [**analytics_user_deletion_user_deletion_request_upsert**](docs/UserDeletionApi.md#analytics_user_deletion_user_deletion_request_upsert) | **POST** /userDeletion/userDeletionRequests:upsert | 


## Documentation For Models

 - [Account](docs/Account.md)
 - [AccountChildLink](docs/AccountChildLink.md)
 - [AccountPermissions](docs/AccountPermissions.md)
 - [AccountRef](docs/AccountRef.md)
 - [AccountSummaries](docs/AccountSummaries.md)
 - [AccountSummary](docs/AccountSummary.md)
 - [AccountTicket](docs/AccountTicket.md)
 - [AccountTreeRequest](docs/AccountTreeRequest.md)
 - [AccountTreeResponse](docs/AccountTreeResponse.md)
 - [Accounts](docs/Accounts.md)
 - [AdWordsAccount](docs/AdWordsAccount.md)
 - [AnalyticsDataimportDeleteUploadDataRequest](docs/AnalyticsDataimportDeleteUploadDataRequest.md)
 - [Column](docs/Column.md)
 - [Columns](docs/Columns.md)
 - [CustomDataSource](docs/CustomDataSource.md)
 - [CustomDataSourceChildLink](docs/CustomDataSourceChildLink.md)
 - [CustomDataSourceParentLink](docs/CustomDataSourceParentLink.md)
 - [CustomDataSources](docs/CustomDataSources.md)
 - [CustomDimension](docs/CustomDimension.md)
 - [CustomDimensionParentLink](docs/CustomDimensionParentLink.md)
 - [CustomDimensions](docs/CustomDimensions.md)
 - [CustomMetric](docs/CustomMetric.md)
 - [CustomMetricParentLink](docs/CustomMetricParentLink.md)
 - [CustomMetrics](docs/CustomMetrics.md)
 - [EntityAdWordsLink](docs/EntityAdWordsLink.md)
 - [EntityAdWordsLinkEntity](docs/EntityAdWordsLinkEntity.md)
 - [EntityAdWordsLinks](docs/EntityAdWordsLinks.md)
 - [EntityUserLink](docs/EntityUserLink.md)
 - [EntityUserLinkEntity](docs/EntityUserLinkEntity.md)
 - [EntityUserLinkPermissions](docs/EntityUserLinkPermissions.md)
 - [EntityUserLinks](docs/EntityUserLinks.md)
 - [Experiment](docs/Experiment.md)
 - [ExperimentParentLink](docs/ExperimentParentLink.md)
 - [ExperimentVariationsInner](docs/ExperimentVariationsInner.md)
 - [Experiments](docs/Experiments.md)
 - [Filter](docs/Filter.md)
 - [FilterAdvancedDetails](docs/FilterAdvancedDetails.md)
 - [FilterExpression](docs/FilterExpression.md)
 - [FilterLowercaseDetails](docs/FilterLowercaseDetails.md)
 - [FilterParentLink](docs/FilterParentLink.md)
 - [FilterRef](docs/FilterRef.md)
 - [FilterSearchAndReplaceDetails](docs/FilterSearchAndReplaceDetails.md)
 - [FilterUppercaseDetails](docs/FilterUppercaseDetails.md)
 - [Filters](docs/Filters.md)
 - [GaData](docs/GaData.md)
 - [GaDataColumnHeadersInner](docs/GaDataColumnHeadersInner.md)
 - [GaDataDataTable](docs/GaDataDataTable.md)
 - [GaDataDataTableColsInner](docs/GaDataDataTableColsInner.md)
 - [GaDataDataTableRowsInner](docs/GaDataDataTableRowsInner.md)
 - [GaDataDataTableRowsInnerCInner](docs/GaDataDataTableRowsInnerCInner.md)
 - [GaDataProfileInfo](docs/GaDataProfileInfo.md)
 - [GaDataQuery](docs/GaDataQuery.md)
 - [Goal](docs/Goal.md)
 - [GoalEventDetails](docs/GoalEventDetails.md)
 - [GoalEventDetailsEventConditionsInner](docs/GoalEventDetailsEventConditionsInner.md)
 - [GoalParentLink](docs/GoalParentLink.md)
 - [GoalUrlDestinationDetails](docs/GoalUrlDestinationDetails.md)
 - [GoalUrlDestinationDetailsStepsInner](docs/GoalUrlDestinationDetailsStepsInner.md)
 - [GoalVisitNumPagesDetails](docs/GoalVisitNumPagesDetails.md)
 - [GoalVisitTimeOnSiteDetails](docs/GoalVisitTimeOnSiteDetails.md)
 - [Goals](docs/Goals.md)
 - [HashClientIdRequest](docs/HashClientIdRequest.md)
 - [HashClientIdResponse](docs/HashClientIdResponse.md)
 - [IncludeConditions](docs/IncludeConditions.md)
 - [LinkedForeignAccount](docs/LinkedForeignAccount.md)
 - [McfData](docs/McfData.md)
 - [McfDataColumnHeadersInner](docs/McfDataColumnHeadersInner.md)
 - [McfDataRowsInnerInner](docs/McfDataRowsInnerInner.md)
 - [McfDataRowsInnerInnerConversionPathValueInner](docs/McfDataRowsInnerInnerConversionPathValueInner.md)
 - [Profile](docs/Profile.md)
 - [ProfileChildLink](docs/ProfileChildLink.md)
 - [ProfileFilterLink](docs/ProfileFilterLink.md)
 - [ProfileFilterLinks](docs/ProfileFilterLinks.md)
 - [ProfileParentLink](docs/ProfileParentLink.md)
 - [ProfilePermissions](docs/ProfilePermissions.md)
 - [ProfileRef](docs/ProfileRef.md)
 - [ProfileSummary](docs/ProfileSummary.md)
 - [Profiles](docs/Profiles.md)
 - [RealtimeData](docs/RealtimeData.md)
 - [RealtimeDataProfileInfo](docs/RealtimeDataProfileInfo.md)
 - [RealtimeDataQuery](docs/RealtimeDataQuery.md)
 - [RemarketingAudience](docs/RemarketingAudience.md)
 - [RemarketingAudienceAudienceDefinition](docs/RemarketingAudienceAudienceDefinition.md)
 - [RemarketingAudienceStateBasedAudienceDefinition](docs/RemarketingAudienceStateBasedAudienceDefinition.md)
 - [RemarketingAudienceStateBasedAudienceDefinitionExcludeConditions](docs/RemarketingAudienceStateBasedAudienceDefinitionExcludeConditions.md)
 - [RemarketingAudiences](docs/RemarketingAudiences.md)
 - [Segment](docs/Segment.md)
 - [Segments](docs/Segments.md)
 - [UnsampledReport](docs/UnsampledReport.md)
 - [UnsampledReportCloudStorageDownloadDetails](docs/UnsampledReportCloudStorageDownloadDetails.md)
 - [UnsampledReportDriveDownloadDetails](docs/UnsampledReportDriveDownloadDetails.md)
 - [UnsampledReports](docs/UnsampledReports.md)
 - [Upload](docs/Upload.md)
 - [Uploads](docs/Uploads.md)
 - [UserDeletionRequest](docs/UserDeletionRequest.md)
 - [UserDeletionRequestId](docs/UserDeletionRequestId.md)
 - [UserRef](docs/UserRef.md)
 - [WebPropertyRef](docs/WebPropertyRef.md)
 - [WebPropertySummary](docs/WebPropertySummary.md)
 - [Webproperties](docs/Webproperties.md)
 - [Webproperty](docs/Webproperty.md)
 - [WebpropertyChildLink](docs/WebpropertyChildLink.md)
 - [WebpropertyParentLink](docs/WebpropertyParentLink.md)
 - [WebpropertyPermissions](docs/WebpropertyPermissions.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/analytics**: View and manage your Google Analytics data
 - **https://www.googleapis.com/auth/analytics.edit**: Edit Google Analytics management entities
 - **https://www.googleapis.com/auth/analytics.manage.users**: Manage Google Analytics Account users by email address
 - **https://www.googleapis.com/auth/analytics.manage.users.readonly**: View Google Analytics user permissions
 - **https://www.googleapis.com/auth/analytics.provision**: Create a new Google Analytics account along with its default property and view
 - **https://www.googleapis.com/auth/analytics.readonly**: View your Google Analytics data
 - **https://www.googleapis.com/auth/analytics.user.deletion**: Manage Google Analytics user deletion requests

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/analytics**: View and manage your Google Analytics data
 - **https://www.googleapis.com/auth/analytics.edit**: Edit Google Analytics management entities
 - **https://www.googleapis.com/auth/analytics.manage.users**: Manage Google Analytics Account users by email address
 - **https://www.googleapis.com/auth/analytics.manage.users.readonly**: View Google Analytics user permissions
 - **https://www.googleapis.com/auth/analytics.provision**: Create a new Google Analytics account along with its default property and view
 - **https://www.googleapis.com/auth/analytics.readonly**: View your Google Analytics data
 - **https://www.googleapis.com/auth/analytics.user.deletion**: Manage Google Analytics user deletion requests


## Author




